--- a/yes.html
+++ b/yes.html
@@ -14,7 +14,18 @@
          alt="Cute animated illustration"
         />
       </div>
-      <button class="btn" id="yesButton" onclick="nextPage()">
+      <button 
+        class="btn" 
+        id="yesButton" 
+      onclick="openLink()"
+      >
         Let's fix a date
       </button>
+      <script>
+        function openLink() {
+            window.open('https://calendar.google.com/calendar/u/0/r/month?pli=1', '_blank');
+        }
+    </script>
     </div>
+  </body>
+</html>
