--- a/yes.html
+++ b/yes.html
@@ -23,7 +23,7 @@
       </button>
       <script>
         function openLink() {
-            window.open('https://calendar.google.com/calendar/u/0/r/month?pli=1', '_blank');
+            window.open('https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=MjRpMmQ1MmhhMW1tM3VwbzdtMDlrMWhzbGYgc29uYWxpbmFoYWsuNzZAbQ&tmsrc=sonalinahak.76%40gmail.com', '_blank');
         }
     </script>
     </div>
