--- a/yes.html
+++ b/yes.html
@@ -10,7 +10,7 @@
       </div>
       <div class="gif_container">
         <img
-          src="./peach.gif"
+          src="./hug.gif"
          alt="Cute animated illustration"
         />
       </div>
