--- a/yes.html
+++ b/yes.html
@@ -21,7 +21,7 @@
       >
         Let's fix a date
       </button>
-      <button class="btn" id="okButton" onclick="nextPage()"> Do you know </button>
+      <button class="btn" id="okButton" onclick="nextPage()"> You know what </button>
       <script>
         function openLink() {
             window.open('https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=MjRpMmQ1MmhhMW1tM3VwbzdtMDlrMWhzbGYgc29uYWxpbmFoYWsuNzZAbQ&tmsrc=sonalinahak.76%40gmail.com', '_blank');
